User message update.
Making Max String Resistance invalid input message similar to Min String Resistance invalid input message.

--- a/high_voltage_divider.html
+++ b/high_voltage_divider.html
@@ -696,7 +696,7 @@ function solveDivider() {
     document.getElementById("resultsTable").innerHTML =
 	  "<tr><td><b>Input Error:</b>&#x2000;" +
     "Max String Resistance must be a nonnegative number.<br/>" +
-    "Units are Ohms. Only the suffixes k (kilo = 10<sup>3</sup>) and " +
+    "Only the suffixes k (kilo = 10<sup>3</sup>) and " +
     "M (mega = 10<sup>6</sup>) are recognized.</td></tr>";
     return;
   }
