--- a/high_voltage_divider.html
+++ b/high_voltage_divider.html
@@ -249,29 +249,23 @@ td.paramLabel {
   <div id="explainerDiv" style="border: 1px solid black; display: inline-block;">
     <div style="float: left; margin-right: 8pt;">
       <!-- Begin High Voltage Divider SVG Image -->
-      <?xml version="1.0" encoding="UTF-8"?>
-      <svg width="170.89pt" height="254.92pt" version="1.1" viewBox="0 0 341.78535 509.84126" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" role="img" aria-label="Voltage Divider Circuit Diagram">
+      <svg width="170.89pt" height="255.53pt" version="1.1" viewBox="0 0 341.78538 511.05427" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" role="img" aria-label="High Voltage Divider Circuit Diagram">
       <title>High Voltage Divider Circuit Diagram</title>
       <desc>Three resistor voltage divider. Upper two series resistors connect to input and output; lower resistor connects to output and ground.</desc>
       <g transform="translate(-154.43 -83.466)">
       <g transform="translate(59.372 125.46)">
-      <path d="m280 157.36v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25" fill="none" stroke="#000" stroke-width="1px"/>
-      <path d="m280 285.35v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25" fill="none" stroke="#000" stroke-width="1px"/>
       <circle cx="185.09" cy="23.362" r="5" fill="none" stroke="#000" stroke-width="1px"/>
-      <path d="m280 267.36v18" fill="none" stroke="#000" stroke-width="1px"/>
       <text x="112.10548" y="222.3307" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="112.10548" y="222.3307" font-size="37.333px">Upper2</tspan></text>
       <text x="133.39714" y="353.69226" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="133.39714" y="353.69226" font-size="37.333px">Lower</tspan></text>
-      <g transform="translate(200 254.98)" fill="none" stroke="#000" stroke-width="1px"><path d="m80 157.36v15h20-40"/><path d="m68 182.36h24"/><path d="m76 192.36h8"/></g>
-      <path d="m280 395.35v17" fill="none" stroke="#000" stroke-width="1px"/>
       <path d="m280 276.1h74.875" fill="none" stroke="#000" stroke-width=".8653px"/>
       <circle cx="360.11" cy="276.1" r="5" fill="none" stroke="#000" stroke-width="1px"/>
       <circle cx="280" cy="276.39" r="2" stroke="#000"/>
       <text x="165.63867" y="6.3668594" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="165.63867" y="6.3668594" font-size="37.333px">Vi</tspan></text>
       <text x="373.44031" y="289.44717" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="373.44031" y="289.44717" font-size="37.333px">Vo</tspan></text>
-      <path d="m280 46.094v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25" fill="none" stroke="#000" stroke-width="1px"/>
-      <path d="m279.99 155.51v2.0978" fill="none" stroke="#000"/>
       <text x="111.8138" y="110.81879" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="111.8138" y="110.81879" font-size="37.333px">Upper1</tspan></text>
-      <path d="m280 46.426v-23.063h-89.842" fill="none" stroke="#000"/></g></g></svg>
+      <g transform="translate(.00229 1.213)">
+      <path d="m280 427.34v-14.98m-20.004 14.98h39.996m-23.994 20.006h8m-16-10h24m-12.004-153.21v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m6e-3 18.222-6e-3 -18.222m-3.2e-4 -127.99v18m2.3e-4 -128v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m0-111.27v1.2658m0-111.27v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m0-110 1e-3 -22.73h-89.842" fill="none" stroke="#000"/>
+      </g></g></g></svg>
       <!-- End High Voltage Divider SVG Image -->
     </div>
     <div style="display: inline-block;">
@@ -347,7 +341,7 @@ td.paramLabel {
     <span resource="[_:publisher]" rel="dct:publisher">
     <span property="dct:title">Ben Tesch</span></span>
     has waived all copyright and related or neighboring rights to
-    <span property="dct:title">Voltage Divider Calculator</span>.
+    <span property="dct:title">High Voltage Divider Calculator</span>.
     This work is published from:
     <span property="vcard:Country" datatype="dct:ISO3166" content="US" about="[_:publisher]">United States</span>.
   </p>
