--- a/high_voltage_divider.html
+++ b/high_voltage_divider.html
@@ -547,7 +547,7 @@ function ShowE24() {
   for (jMult = 0; jMult < multipliers.length; jMult++) {
     tableString += '<tr class="shadedRow"><td style="text-align:center; font-weight: bold">';
     tableString += resistanceString(multipliers[jMult]) + ' decade</td></tr>';
-    tableString += '<tr><td><div style="line-height: 1.5">';
+    tableString += '<tr><td style="line-height: 1.5">';
   
     for (jVal = 0; jVal < E24.length-1; jVal++) {
       tableString += resValToString(multipliers[jMult]*E24[jVal], 3);
@@ -559,7 +559,7 @@ function ShowE24() {
     }
   
     tableString += resValToString(multipliers[jMult]*E24[E24.length-1], 3);
-    tableString += '</div></tr></td>';
+    tableString += '</td></tr>';
   }
 
   document.getElementById("resultsTable").innerHTML = tableString;
@@ -575,7 +575,7 @@ function ShowE96() {
   for (jMult = 0; jMult < multipliers.length; jMult++) {
     tableString += '<tr class="shadedRow"><td style="text-align:center; font-weight: bold">';
     tableString += resistanceString(multipliers[jMult]) + ' decade</td></tr>';
-    tableString += '<tr><td><div style="line-height: 1.5">';
+    tableString += '<tr><td style="line-height: 1.5">';
   
     for (jVal = 0; jVal < E96.length-1; jVal++) {
       tableString += resValToString(multipliers[jMult]*E96[jVal], 3);
@@ -587,7 +587,7 @@ function ShowE96() {
     }
   
     tableString += resValToString(multipliers[jMult]*E96[E96.length-1], 3);
-    tableString += '</div></tr></td>';
+    tableString += '</td></tr>';
   }
 
   document.getElementById("resultsTable").innerHTML = tableString;
